# GreenMessenger

./: README.md
Client/: CMakeLists.txt  clientcontroller.cpp  clientcontroller.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  usermessages.cpp  usermessages.h
Common/: CMakeLists.txt  message.cpp  message.h  user.cpp  user.h
Server/: CMakeLists.txt  MessengerServer.cpp  MessengerServer.h  main.cpp
